[tool.poetry]
name = "oracle"
version = "4.0.0"
description = "StakeWise Oracles are responsible for submitting off-chain data."
authors = ["Dmitri Tsumak <tsumak.dmitri@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.10"
python-decouple = "==3.6"
web3 = "==5.31.0"
py-ecc = "==5.2.0"
gql = {version = "3.4.0", extras = ["aiohttp"]}
backoff = "2.1.2"
aiohttp = {version = "==3.8.1", extras = ["speedups"]}
boto3 = {version = "==1.22.1", extras = ["awscrt"]}
sentry-sdk = "1.9.5"

[tool.poetry.dev-dependencies]
mypy = "==0.950"
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
flake8-black = "==0.3.2"
flake8-bugbear = "==22.4.25"
pre-commit = "==2.18.1"
pytest = "==7.1.1"
pytest-asyncio = "==0.18.3"
Faker = "==13.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
